add simple ui for the queue, ability to pop/drop the last element by clicking on the text add save/load of queue_list temporary disable most of queueSources add and use game.time.queue.showList to update queue list ui handle spaceBuilding and default types change game.time.queue.addToQueue to work with lables fix queueLink being active at a wrong time

--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
 						<option value="noneBuy">None</option>
 						</select>
 						<button type="queueAddButton" onclick="game.time.queue.buttonQueue(event)">Add to queue</button>
+						<p id = "queue_list_ui" onclick = "game.time.queue.listDrop(event)"></p>
 					</div>
 				</div>
 				<div
