fix bug caused by switching types delete useless text

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 						</div>
 					</div>
 					<div class="right-tab" id="rightTabQueue" style="display:none;">
-						<div id="IRCChatInner">QUEUE GOES HERE</div>
+						<div id="IRCChatInner"></div>
 						<label for="queueTypeSelect">Choose a type:</label>
 
 						<select name="queueTypeSelect" id="queueTypeSelect" onchange='game.time.queue.updateBuySelect(event)'>
