updating forum link

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 			</div>
 
 			<div id="footerLinks" class="links-block">
-				<a id="reddit" href="https://www.reddit.com/r/kittensgame/" target="_blank">reddit</a> |
+				<a id="forum" href="https://forum.kittensgame.com/c/kittensgame" target="_blank">forum</a> |
 				<a id="wiki" href="https://wiki.kittensgame.com/" target="_blank">wiki</a> |
 				<a id="discord" href="https://discord.gg/2arBf9K" target="_blank">Discord</a> |
 				<!-- <a href="http://kittensgame.tumblr.com" target="_blank">tumblr</a> | -->
