Squashed commit of the following:
commit 094e8c54c608a0367719b5e81c7247433cc7776b
Author: bloodrizer <cheshire.panther@gmail.com>
Date:   Sat Oct 28 17:14:03 2023 -0700

    Squashed commit of the following:

    commit 4d460e498deec577d1d564cc2f5cffe6a3b86dd0
    Author: plcp <matthieu@daumas.me>
    Date:   Sun Oct 29 00:03:13 2023 +0000

        Merged in bsk/emptySky (pull request #1229)

        Sattelite penalty under repeated BSK

        * Sattelite penalty under repeated BSK

        Approved-by: Brent Call

    commit c9f660133bbd8bb08758ba73f8e6b9476fcf78fe
    Author: Pedro Zunino <pedrozunino7@gmail.com>
    Date:   Sat Oct 28 18:46:46 2023 +0000

        Merged in feat/move-queue-items (pull request #1236)

        feat: rearrange queue items

        * feat: rearrange queue items

    commit 2caf901235a4f28bf3901101c521a39ceab6ec6d
    Author: Ziggurat <ziggurat0001@protonmail.com>
    Date:   Sat Oct 28 10:04:51 2023 +0000

        Merged in dev/beta (pull request #1240)

        Dev/beta (master -> beta)

        * small siphoning ui fixes, siphoning description change and adding totalPerDayDelta for alicorns

        * get rid of debug things

        * improve description

        * Merged in master (pull request #1225)

        Siphoning and pacts ui improvements
        * fix siphoning not using necrocornsNaiveFastForward
        fix bug where corruption is multiplied by days and divided by ticks per day for comparison of necrocorn per day values in necrocornFastForward

        * Merged in master (pull request #1234)

        Redshift pacts logic bugfixes

        * fix siphoning not using necrocornsNaiveFastForward
        fix bug where corruption is multiplied by days and divided by ticks per day for comparison of necrocorn per day values in necrocornFastForward
        * Merged in Ziggurat/set-queue_redshift-flag-to-true-on-main-1698452752943 (pull request #1237)

        set QUEUE_REDSHIFT flag to true on main
        * Merged bloodrizer/ki

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 		<script type="text/javascript">
 
-			var version = "1492";
+			var version = "1493";
 			var buildRevision = 0;
 
 			var loadingProgress = 0,
@@ -140,7 +140,6 @@
 					"js/jsx/mid.jsx",
 					"js/jsx/toolbar.jsx",
 					"js/jsx/chiral.jsx",
-					"js/jsx/map.jsx",
 					"js/jsx/queue.jsx",
 
 					//required for defining IReactAware, will be relied upon by js/space
@@ -319,7 +318,7 @@
 				<div style="padding-left: 10px; min-width: 0px; max-width: 400px; overflow: hidden; text-overflow: ellipsis;">
 					<span class="gameTitle">Kittens Game </span>
 					<span style="font-size: small;">
-						by <a href="http://kittensgame.com/" class="copyright" target="_blank">bloodrizer</a>
+						by <a href="http://kittensgame.com/" class="copyright" target="_blank" tabindex="-1">bloodrizer</a>
 					</span>
 					<!--- a Dark Souls of incremental gaming -->
 
@@ -332,9 +331,9 @@
 					</span>
 
 					<span style="font-size: small;">
-						<a href="http://kittensgame.com/alpha" title="experimental, unstable" target="_blank" style="opacity:0.6;">&alpha;</a>
-						<a href="http://kittensgame.com/beta" title="experimental, stable" target="_blank">&beta;</a>
-						<a href="http://kittensgame.com/web" title="RC, nighty build" target="_blank">ML</a>
+						<a href="http://kittensgame.com/alpha" tabindex="0" title="experimental, unstable" target="_blank" style="opacity:0.6;">&alpha;</a>
+						<a href="http://kittensgame.com/beta" tabindex="0" title="experimental, stable" target="_blank">&beta;</a>
+						<a href="http://kittensgame.com/web" tabindex="0" title="RC, nighty build" target="_blank">ML</a>
 					</span>
 				</div>
 
@@ -684,7 +683,7 @@
 			</div>
 
 			<div id="footerLinks" class="links-block">
-				<a id="reddit" href="https://www.reddit.com/r/kittensgame/" target="_blank">reddit</a> |
+				<a id="forum" href="https://forum.kittensgame.com/c/kittensgame" target="_blank">forum</a> |
 				<a id="wiki" href="https://wiki.kittensgame.com/" target="_blank">wiki</a> |
 				<a id="discord" href="https://discord.gg/2arBf9K" target="_blank">Discord</a> |
 				<!-- <a href="http://kittensgame.tumblr.com" target="_blank">tumblr</a> | -->
