Changed typo "import form" to "import from" on save menu.

--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 
 			<div id="importDiv" style="display: none" class="dialog help">
 				<div id="importWarning">Warning! Importing data will overwrite your current game data.</div>
-				<h1 id="importFrom">Import Form:</h1>
+				<h1 id="importFrom">Import From:</h1>
 				<input id="importFromDropbox" type="button" onclick="gamePage.saveImportDropbox();" value="Dropbox (Beta)">
 				<br>
 				<h1 id="importFromText">Text Import:</h1>
