--- a/index_kgg.html
+++ b/index_kgg.html
@@ -282,8 +282,8 @@
 						<a id="dev_boostCalendar" href="#" onclick="dev_boostCalendar();" style="display: none; text-decoration: none; position: relative; left: 5px;">&gt;&gt;&gt;</a>
 					</div>
 					<div class="right-tab-header">
-						<a href="#" onclick="gamePage.ui.hideChat();">Log</a>
-						<a href="#" onclick="gamePage.ui.loadChat();">Chat</a>
+						<a href="#" onclick="gamePage.ui.loadLog();">Log</a>
+						<a href="#" onclick="gamePage.ui.loadQueue();">Queue</a>
 					</div>
 					<div id="observeButton" style="text-align: center; margin-top: 5px; height: 30px;"></div>
 					<div class="right-tab" id="rightTabLog">
@@ -307,9 +307,6 @@
 						<div id="gameLog" style="overflow-y: scroll; padding-top: 10px; height: 100%; min-height:100%;">
 							<!-- Log goes there -->
 						</div>
-					</div>
-					<div class="right-tab" id="rightTabChat" style="display:none;">
-						<div id="IRCChatInner">CHAT GOES THERE</div>
 					</div>
 				</div>
 				<!-- ADS -->
