Integrate Changes from Default Branch into Alpha  (#84)
* make the % for the heatCompression be %

1000 years was 100 times weaker than intended with heatCompression formula. ooups

* A few bugfixes & Easter eggs (#45)

* Prevent NULL year & season from showing in the log if you don't have Calendar

* Fix hash level not being properly reset at 0 hashes

* Easter egg will disappear on April 2

* Easter egg: pumpkin spice in October

* Hide redeemGiftBtn if elderBox resource is hidden from resource pane

* fix a dojo subscription leak from chiral (#58)

I noticed my tab running sluggishly, dumped the heap, and quickly
noticed about 64MB of retained closures in the ui/update topic
listeners. I noticed they had the `setCommand` function and found this
React component. It looks like there was a typo which prevents the
unsubscription. I was able to confirm with the debugger that
`componentDidMount` is called fairly frequently and that
`componentWillUmount` does not get called.

The best I could do to verify this fix, since I don't have a user login
server, was to change the condition to render the furthest ring tab and
then check the listeners via `dojo._topics["ui/update"]._listeners`.
Before the fix, this would grow by 1 each time you click in and out of
the space tab. After apply the fix, it did not grow, though it appears
`dojo.unsubscribe` simply deletes from the array, leaving it sparse. It
appears to run just fine.

* fix redshift applying calendar updates twice (#60)

The bug is that when applying redshift under certain conditions,
`game.calendar.fastForward()` is called twice. This is triggered when:

1. The `QUEUE_REDSHIFT` flag is enabled (true by default)
2. The queue is empty

The short-circuiting path must call `this.applyRedshift(x, true)` to
ignore the calendar, since `game.calendar.fastForward(x)` is called on
the other side of the `while` loop. Without passing `true`, the calendar
is advanced twice, meaning yo

--- a/index.html
+++ b/index.html
@@ -253,14 +253,6 @@
 					gamePage.ui.onLoad();
 					gamePage.start();
 
-
-					//load optional irc
-
-					$('iframe#kiwiirc_iframe').attr(
-						'src', 
-						'https://kiwiirc.com/client/irc.canternet.org/?nick=kitten_?#kittensgame'
-					);
-
 					var config = new classes.KGConfig();
 
 					//update eldermass gifts on every game load pass
@@ -423,8 +415,7 @@
 						<a id="dev_boostCalendar" href="#" onclick="dev_boostCalendar();" style="display: none; text-decoration: none; position: relative; left: 5px;">&gt;&gt;&gt;</a>
 					</div>
 					<div class="right-tab-header">
-						<a id="logLink" href="#" class="active" onclick="gamePage.ui.hideChat();">Log</a>
-						<a id="chatLink" class="chatLink" href="#" onclick="gamePage.ui.loadChat();">Chat</a>
+						<a id="logLink" href="#" class="active" onclick="gamePage.ui.loadLog();">Log</a>
 						<a id="queueLink" class="queueLink" href="#" onclick="gamePage.ui.loadQueue();">Queue</a>
 					</div>
 					<div id="observeButton"></div>
@@ -452,13 +443,6 @@
 					</div>
 					<div class="right-tab" id="rightTabQueue" style="display:none;">
 						<div id="queueViewport"></div>
-					</div>
-					<div class="right-tab" id="rightTabChat" style="display:none;">
-						<div id="IRCChatInner">
-
-							<!--iframe-- src="https://kiwiirc.com/client/irc.canternet.org/?nick=kitten_?#kittensgame" style="border:0; width: 400px; height:800px;"></iframe-->
-							<iframe id="kiwiirc_iframe" style="border:0; width: 400px; height:800px;"></iframe>
-						</div>
 					</div>
 				</div>
 				<div
