better button tooltip accessability

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 			</div>
 
 			<div id="game" style="display:none;">
-				<div id="tooltip" class="button_tooltip"></div>
+				<div id="tooltip" class="button_tooltip" role="tooltip" tabindex="0"></div>
 
 				<!-- LEFT -->
 				<div id="leftColumn" class="column" style="vertical-align: top;" aria-label="Resource panel">
