update extension to correctly indicate to linter what is es6 and what is not

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				},
 				transpiler: 'plugin-babel'
 			});
-			System.import('js/sample_es6.js');
+			System.import('js/sample.es6.js');
 		</script>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
