--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					"js/diplomacy",
 					"js/religion",
 					"js/achievements",
-
+					"js/settings",
 
 					"js/jsx/left.jsx",
 					"js/jsx/mid.jsx",
