KGM upstream merge

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 					<li title="Policies design and being a Grand Mufti">
 						Hunter
 					</li>
-					<li title="Policies, general code stuff">
+					<li title="For years of dedication and support">
 						Ziggurat
 					</li>
 					<li title="Exploration, general code stuff">
@@ -506,6 +506,9 @@
 					</li>
 					<li title="help with i18n and localization">
 						<a href="http://www.reddit.com/user/Pellax">PellaAndroid</a>
+					</li>
+					<li title="Endless help and Buddha-like patience">
+						Brent
 					</li>
 				</ul>
 
