KGM -> KG upmerge (#115)
* KGM upstream merge

* missing lint fixes

* thanks god for tests

* fix rendering artifacts and hide mobile-specific tab

* fix forced cache regeneration

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 			var version = "1494";
 			var buildRevision = 0;
 
+			var invalidateCache = false;
+
 			var loadingProgress = 0,
 				progressMax = 0;
 
@@ -98,7 +100,11 @@
 
 				var i = (Math.floor(Math.random() * loadingMessages.length));
 				$("#loadingProgressInfo").html(loadingMessages[i] + "...&nbsp(" + progress.toFixed() + "%)");
-				return System.import(module + ".js?rev_=" + buildRevision + "_" + Date.now());
+				var rev = buildRevision;
+				if (invalidateCache){
+					rev += "_" + Date.now();
+				}
+				return System.import(module + ".js?rev_=" + rev);
 			}
 
 			function _import(module, def){
@@ -495,7 +501,7 @@
 					<li title="Policies design and being a Grand Mufti">
 						Hunter
 					</li>
-					<li title="Policies, general code stuff">
+					<li title="For years of dedication and support">
 						Ziggurat
 					</li>
 					<li title="Exploration, general code stuff">
@@ -506,6 +512,9 @@
 					</li>
 					<li title="help with i18n and localization">
 						<a href="http://www.reddit.com/user/Pellax">PellaAndroid</a>
+					</li>
+					<li title="Endless help and Buddha-like patience">
+						Brent
 					</li>
 				</ul>
 
