switch to svg icons for certain uniconde elements, slightly clean up themes to control main color accents with css variables, scale down large X/Y button values, default to meta.on instead of X/Y notation when meta.on is maxed, remove outdated links

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 				</div>
 				
 				<div id="headerLinks">
-					<div id="headerToolbar" style="font-size: 12px; padding-top: 3px;">
+					<div id="headerToolbar" style="font-size: 12px;">
 						<!-- toolbar panel goes there -->
 					</div>
 					<span id="autosaveTooltip" style="padding-right: 15px; font-size: 12px; opacity: 0;">autosaving...</span>
@@ -462,7 +462,7 @@
 				<div
 					id="toggleCenter" onClick="gamePage.ui.toggleCenter();" class="column" tooltip="Toggle centered view"
 				>
-					<span class="toggleCenter">&gt;</span>
+					<span class="toggleCenter"><div id="toggleCenterIcon" class="svg-icon right"/></span>
 				</div>
 			</div>
 
@@ -621,13 +621,11 @@
 			</div>
 
 			<div id="footerLinks" class="links-block">
-				<a id="forum" href="https://forum.kittensgame.com/c/kittensgame" target="_blank">forum</a> |
 				<a id="wiki" href="https://wiki.kittensgame.com/" target="_blank">wiki</a> |
 				<a id="discord" href="https://discord.gg/2arBf9K" target="_blank">Discord</a> |
 				<!-- <a href="http://kittensgame.tumblr.com" target="_blank">tumblr</a> | -->
 				<!-- <a href="#" onclick="$('#helpDiv').toggle();">help</a> | -->
 				<a id="credits" href="#" onclick="$('#creditsDiv').toggle();">credits</a> |
-				<a id="donate" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=82FJX5M8M3GVN" target="_blank">donate</a> |
 				<a id="patreon" href="https://www.patreon.com/bloodrizer" target="_blank">Patreon</a>
 				<!--  | <a href="classic/" target="_blank">classic</a> -->
 			</div>
