add steam link and remove annoying scroll on options div

--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 					<span id="devModeButton" style="display: none;"><a href="#" id="devBtn" onclick="dev();">DEV</a> |</span>
 					<a id="wipe-link" href="#" onclick="wipe();">Wipe</a> |
 					<a id="getTheApp-link" href="#" onclick="gamePage.ui.displayAppDialog();" style="font-weight: bold; color:#666;">Get the app</a> |
+					<a id="getTheApp-link" href="https://store.steampowered.com/app/1097410/Kittens_Game/" target="_blank" style="font-weight: bold; color:#666;">Steam</a> |
 
 					<a href="changelog.txt" target="_blank">Ver <span id="versionLink">?.?.?.?</span></a>
 					<a href="#" id="newVersion" onClick="gamePage.reload();" title="New version available!" style="display:none">↻</a>
